--- a/UniversityCourseManagement/UniversityCourseManagement.vbproj
+++ b/UniversityCourseManagement/UniversityCourseManagement.vbproj
@@ -122,6 +122,7 @@
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
@@ -276,10 +277,12 @@
     <Compile Include="Controllers\HomeController.vb" />
     <Compile Include="Controllers\ManageController.vb" />
     <Compile Include="Controllers\MeController.vb" />
+    <Compile Include="Controllers\CourseController.vb" />
     <Compile Include="Global.asax.vb">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.vb" />
+    <Compile Include="Models\CourseModels.vb" />
     <Compile Include="Models\IdentityModels.vb" />
     <Compile Include="Models\ManageViewModels.vb" />
     <Compile Include="Models\MeViewModels.vb" />
@@ -349,6 +352,7 @@
     <Content Include="Content\bootstrap-reboot.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap.min.css.map" />
+    <Content Include="Views\Course\Course.vbhtml" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
